syntax = "proto3";
package protobuf;

message Report {
	string project_name = 1;
	int32 project_id = 2;
	int32 project_export_id = 3;

	oneof state {
		Progress progress = 4;
		Complete complete = 5;
	}

	message Progress {
		float percentage = 1;
		string message = 2;
	}

	message Complete {
		string path = 1;
	}
}
